--- a/FrontEnd/Pages/FetchProducts.razor
+++ b/FrontEnd/Pages/FetchProducts.razor
@@ -8,7 +8,7 @@
     {
         foreach (var product in products)
         {
-            <li>@product.Name - $@product.Price</li>
+            <li>@product.Name - $@product.Price - $@product.Category.Name</li>
         }
     }
     else
@@ -42,9 +42,16 @@
 
     public class Product
     {
+        public required int Id { get; set; }
+        public required string? Name { get; set; }
+        public required double Price { get; set; }
+        public required int Stock { get; set; }
+        public required Category Category { get; set; }
+    }
+
+    public class Category
+    {
         public int Id { get; set; }
         public string? Name { get; set; }
-        public double Price { get; set; }
-        public int Stock { get; set; }
     }
 }
